# AdventOfCode

./: .gitignore  CMakeLists.txt  LICENSE  README.md
2015/: Day1.cpp
2021/Day1/: puzzle1.cpp  puzzle2.cpp
2021/Day2/: puzzle1.cpp  puzzle2.cpp
2021/Day3/: puzzle1  puzzle1.cpp
2022/: Solutions2022.md
2022/Day1/: puzzle1.cpp  puzzle2.cpp
2023/: Solutions2023.md
2023/Day1/puzzle1/: pubspec.yaml
2023/Day1/puzzle1/lib/: puzzle1.dart
2023/Day1/puzzle1/test/: puzzle1_test.dart
2024/: Solutions2024.md
